--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>cloud-provider-hystrix-payment8001</module>
       <module>cloud-consumer-hystrix-dashboard9001</module>
       <module>cloud-gateway-gateway9527</module>
+    <module>cloud-config-center-3344</module>
   </modules>
   <packaging>pom</packaging>
 
