--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -31,6 +31,7 @@ eureka:
   instance:
     instance-id: config80
     prefer-ip-address: true
+    #curl -X POST localhost:3344/actuator/bus-refresh/{clientName:port}
 management:
   endpoints:
     web:
