--- a/cloud-stream-rabbitmq-consumer8802/src/main/resources/application.yml
+++ b/cloud-stream-rabbitmq-consumer8802/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8801
+  port: 8802
 spring:
   application:
-    name: cloud-stream-provider8801
+    name: cloud-stream-provider8802
   cloud:
     stream:
       binders:  #需要绑定的rabbitmq的服务信息
@@ -16,10 +16,11 @@ spring:
                 username: guest
                 password: guest
       bindings: # 服务的整合处理
-        output: # 名字是一个通道的名称
+        input: # 名字是一个通道的名称
           destination: studyExchange # 表示要使用的Exchange名称定义
           content-type: application/json # 设置消息类型，本次为json
           binder: defaultRabbit #设置要绑定的消息服务的具体设置
+          group: zbhuangB
 eureka:
   client:
     service-url:
@@ -27,5 +28,5 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 2
     lease-expiration-duration-in-seconds: 5
-    instance-id: send-8801.com
+    instance-id: receive-8802.com
     prefer-ip-address: true
