nacos配置文件自动更新，单机模式

--- a/cloudalibaba-consumer-nacos-Order83/src/main/resources/application.yml
+++ b/cloudalibaba-consumer-nacos-Order83/src/main/resources/application.yml
@@ -9,3 +9,5 @@ spring:
         server-addr: 192.168.0.104:8848
 server-url:
   nacos-user-service: http://nacos-payment-provider
+  # nacos的AP与CP切换
+  # curl -X PUT '$NACOS_SERVER:8848/nacos/v1/ns/operator/switches?entry=serverMode&value=CP"
