--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <module>cloudalibaba-consumer-nacos-Order83</module>
     <module>cloudalibaba-provider-payment9002</module>
       <module>cloudalibaba-config-nacos-client3377</module>
+      <module>cloudalibaba-sentinel-service8401</module>
   </modules>
   <packaging>pom</packaging>
 
